# clipper-bot

./: .gitignore  LICENSE  README.md  add_guild_wl.py  config.example.py  config.py  config.sample.py  pyproject.toml  set_update_news.py  setup.cfg
clipperbot/: __init__.py  __main__.py  persistent_dict.py  utils.py  vtuber_names.py
clipperbot/bot/: __init__.py  admin.py  bot.py  deletables.py  exceptions.py  help_strings.py  run.py  sent_clips.py  streams.py  upd_news.py  user.py  utils.py
clipperbot/download/: download.py  exceptions.py  extractors.py  listen.py  multilisten.py
clipperbot/download/downloader/: __init__.py  base.py  twitch.py  twspace.py  youtube.py  ytdl.py
clipperbot/download/listener/: __init__.py  base.py  twitch.py  twspace.py  youtube.py  yt_stream.py  ytdl.py
clipperbot/facedetection/: __init__.py
clipperbot/streams/: _watcher.py  clip.py  cutting.py  exceptions.py  url_finder.py  yt_dlp_extractor.py
clipperbot/streams/download/: holodex.py  yt_live.py  ytdl_past.py
clipperbot/streams/stream/: __init__.py  base.py  get_stream.py  ttv.py  yt.py
clipperbot/streams/watcher/: __init__.py  base.py  share.py  ttv.py  yt_chn.py  yt_stream.py
clipperbot/video/: clip.py  download.py  facetracking.py  utils.py
clipperbot/webserver/: ip_obf_log.py  rangedstatic.py  rangedstaticfiles.py  serveclips.py
