[metadata]
name = clipper-bot
author = "OdielDomanie"
description = Discord bot that clips livestreams
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: POSIX

[options]
python_requires = >=3.9
install_requires =
    discord.py
    youtube-dl==2021.6.6
    starlette
    uvicorn

[options.packages.find]
where = clipperbot
