[metadata]
name = clipper-bot
author = "OdielDomanie"
version = 1.2
description = Discord bot that clips livestreams
url = https://github.com/OdielDomanie/clipper-bot
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: POSIX

[options]
python_requires = >=3.9
install_requires =
    discord.py
    youtube-dl==2021.6.6
    starlette
    uvicorn
    aiohttp
    python-dateutil
    psutil
    opencv-python-headless

[options.packages.find]
where = clipperbot
