[metadata]
name = clipper-bot
author = "OdielDomanie"
version = 2.0
description = Discord bot that clips livestreams
url = https://github.com/OdielDomanie/clipper-bot
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: POSIX

[options]
python_requires = >=3.10
install_requires =
    discord.py
    yt-dlp
    starlette
    uvicorn
    aiohttp
    python-dateutil
    psutil
    opencv-python-headless
    python-dotenv

[options.packages.find]
where = clipperbot
